--- a/SpaceCatRTS/Config/DefaultEngine.ini
+++ b/SpaceCatRTS/Config/DefaultEngine.ini
@@ -106,7 +106,7 @@ DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/TopDownCPP/Maps/TopDownExampleMap.TopDownExampleMap
+EditorStartupMap=/Game/Maps/Level01.Level01
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -115,7 +115,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/TopDownCPP/Maps/TopDownExampleMap.TopDownExampleMap
+GameDefaultMap=/Game/Maps/Level01.Level01
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/GameMode/BPGM_Level.BPGM_Level_C
 GlobalDefaultServerGameMode=None
@@ -180,6 +180,24 @@ GlobalDefaultServerGameMode=None
 +CollisionChannelRedirects=(OldName="TEST",NewName="______TEST")
 +CollisionChannelRedirects=(OldName="______TEST",NewName="Clickable")
 +CollisionChannelRedirects=(OldName="Clickable",NewName="ClickableLeft")
+
+[/Script/Engine.UserInterfaceSettings]
+RenderFocusRule=NavigationOnly
+HardwareCursors=()
+SoftwareCursors=()
+DefaultCursor=None
+TextEditBeamCursor=None
+CrosshairsCursor=None
+HandCursor=None
+GrabHandCursor=None
+GrabHandClosedCursor=None
+SlashedCircleCursor=None
+ApplicationScale=1.000000
+UIScaleRule=ShortestSide
+CustomScalingRuleClass=None
+UIScaleCurve=(EditorCurveData=(Keys=((Time=480.000000,Value=0.444000),(Time=720.000000,Value=0.666000),(Time=1080.000000,Value=1.000000),(Time=8640.000000,Value=8.000000)),PreInfinityExtrap=RCCE_Constant,PostInfinityExtrap=RCCE_Constant,DefaultValue=340282346638528859811704183484516925440.000000),ExternalCurve=None)
+bAllowHighDPIInGameMode=False
+bLoadWidgetsOnDedicatedServer=True
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
