Added hotel assignation + fixed bug:
- playercontroller was trying to access destroyed engineer

--- a/SpaceCatRTS/Config/DefaultEngine.ini
+++ b/SpaceCatRTS/Config/DefaultEngine.ini
@@ -199,6 +199,9 @@ UIScaleCurve=(EditorCurveData=(Keys=((Time=480.000000,Value=0.444000),(Time=720.
 bAllowHighDPIInGameMode=False
 bLoadWidgetsOnDedicatedServer=True
 
+[/Script/AIModule.AISystem]
+DefaultSightCollisionChannel=ECC_Vehicle
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
