--- a/SpaceCatRTS/Config/DefaultGame.ini
+++ b/SpaceCatRTS/Config/DefaultGame.ini
@@ -1,6 +1,10 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=C79B60444F4768540D52E9817E4958D7
-ProjectName=Top Down Game Template
+ProjectName=Space Cat Hotel
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "DE9269E1468EF5D5C6F75397E6B6014B", "Space Cat Hotel")
+ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "243FC2114D90E31D48C9A2829AC99758", "Debug - Space Cat Hotel")
+Description=Space Cat Hotel
+CompanyName=nsobczak
 
 [/Script/SpaceCatRTS.SpaceCatRTSCharacter]
 FixedCameraPitch=-45.0
@@ -11,8 +15,84 @@ bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 
 [/Script/UnrealEd.ProjectPackagingSettings]
-bCompressed=True
+Build=IfProjectHasCode
+BuildConfiguration=PPBC_Development
+StagingDirectory=(Path="G:/Documents/Git/SpaceCatRTS/Build")
+FullRebuild=False
+ForDistribution=False
+IncludeDebugFiles=False
+BlueprintNativizationMethod=Disabled
+bIncludeNativizedAssetsInProjectGeneration=False
+bExcludeMonolithicEngineHeadersInNativizedCode=False
+UsePakFile=True
+bGenerateChunks=False
+bGenerateNoChunks=False
+bChunkHardReferencesOnly=False
+bForceOneChunkPerFile=False
+MaxChunkSize=0
+bBuildHttpChunkInstallData=False
+HttpChunkInstallDataDirectory=(Path="")
+PakFileCompressionFormats=
+PakFileAdditionalCompressionOptions=
+HttpChunkInstallDataVersion=
+IncludePrerequisites=True
+IncludeAppLocalPrerequisites=False
 bShareMaterialShaderCode=True
 bSharedMaterialNativeLibraries=True
+ApplocalPrerequisitesDirectory=(Path="")
+IncludeCrashReporter=False
+InternationalizationPreset=English
+-CulturesToStage=en
++CulturesToStage=en
+bCookAll=False
+bCookMapsOnly=False
+bCompressed=True
+bEncryptIniFiles=False
+bEncryptPakIndex=False
+GenerateEarlyDownloaderPakFile=False
 bSkipEditorContent=True
+bSkipMovies=False
+-EarlyDownloaderPakFileFiles=...\Content\Internationalization\...\*.icu
+-EarlyDownloaderPakFileFiles=...\Content\Internationalization\...\*.brk
+-EarlyDownloaderPakFileFiles=...\Content\Internationalization\...\*.res
+-EarlyDownloaderPakFileFiles=...\Content\Internationalization\...\*.nrm
+-EarlyDownloaderPakFileFiles=...\Content\Internationalization\...\*.cfu
+-EarlyDownloaderPakFileFiles=...\Content\Localization\...\*.*
+-EarlyDownloaderPakFileFiles=...\Content\Localization\*.*
+-EarlyDownloaderPakFileFiles=...\Content\Certificates\...\*.*
+-EarlyDownloaderPakFileFiles=...\Content\Certificates\*.*
+-EarlyDownloaderPakFileFiles=-...\Content\Localization\Game\...\*.*
+-EarlyDownloaderPakFileFiles=-...\Content\Localization\Game\*.*
+-EarlyDownloaderPakFileFiles=...\Config\...\*.ini
+-EarlyDownloaderPakFileFiles=...\Config\*.ini
+-EarlyDownloaderPakFileFiles=...\Engine\GlobalShaderCache*.bin
+-EarlyDownloaderPakFileFiles=...\Content\ShaderArchive-Global-*.ushaderbytecode
+-EarlyDownloaderPakFileFiles=...\Content\Slate\*.*
+-EarlyDownloaderPakFileFiles=...\Content\Slate\...\*.*
+-EarlyDownloaderPakFileFiles=...\*.upluginmanifest
+-EarlyDownloaderPakFileFiles=...\*.uproject
+-EarlyDownloaderPakFileFiles=...\global_sf*.metalmap
++EarlyDownloaderPakFileFiles=...\Content\Internationalization\...\*.icu
++EarlyDownloaderPakFileFiles=...\Content\Internationalization\...\*.brk
++EarlyDownloaderPakFileFiles=...\Content\Internationalization\...\*.res
++EarlyDownloaderPakFileFiles=...\Content\Internationalization\...\*.nrm
++EarlyDownloaderPakFileFiles=...\Content\Internationalization\...\*.cfu
++EarlyDownloaderPakFileFiles=...\Content\Localization\...\*.*
++EarlyDownloaderPakFileFiles=...\Content\Localization\*.*
++EarlyDownloaderPakFileFiles=...\Content\Certificates\...\*.*
++EarlyDownloaderPakFileFiles=...\Content\Certificates\*.*
++EarlyDownloaderPakFileFiles=-...\Content\Localization\Game\...\*.*
++EarlyDownloaderPakFileFiles=-...\Content\Localization\Game\*.*
++EarlyDownloaderPakFileFiles=...\Config\...\*.ini
++EarlyDownloaderPakFileFiles=...\Config\*.ini
++EarlyDownloaderPakFileFiles=...\Engine\GlobalShaderCache*.bin
++EarlyDownloaderPakFileFiles=...\Content\ShaderArchive-Global-*.ushaderbytecode
++EarlyDownloaderPakFileFiles=...\Content\Slate\*.*
++EarlyDownloaderPakFileFiles=...\Content\Slate\...\*.*
++EarlyDownloaderPakFileFiles=...\*.upluginmanifest
++EarlyDownloaderPakFileFiles=...\*.uproject
++EarlyDownloaderPakFileFiles=...\global_sf*.metalmap
+bNativizeBlueprintAssets=False
+bNativizeOnlySelectedBlueprints=False
+
 
