--- a/SpaceCatRTS/Config/DefaultEngine.ini
+++ b/SpaceCatRTS/Config/DefaultEngine.ini
@@ -109,21 +109,6 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
 
-[/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/Level01.Level01
-LocalMapOptions=
-TransitionMap=None
-bUseSplitscreen=True
-TwoPlayerSplitscreenLayout=Horizontal
-ThreePlayerSplitscreenLayout=FavorTop
-FourPlayerSplitscreenLayout=Grid
-bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Maps/Level01.Level01
-ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/GameMode/BPGM_Level.BPGM_Level_C
-GlobalDefaultServerGameMode=None
-
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=NavigationOnly
 HardwareCursors=()
@@ -250,4 +235,18 @@ InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 
+[/Script/EngineSettings.GameMapsSettings]
+EditorStartupMap=/Game/Maps/Level01.Level01
+LocalMapOptions=
+TransitionMap=None
+bUseSplitscreen=True
+TwoPlayerSplitscreenLayout=Horizontal
+ThreePlayerSplitscreenLayout=FavorTop
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/Maps/MainMenu.MainMenu
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/GameMode/BPGM_Level.BPGM_Level_C
+GlobalDefaultServerGameMode=None
 
