Display construction cost on hud

--- a/SpaceCatRTS/Config/DefaultGame.ini
+++ b/SpaceCatRTS/Config/DefaultGame.ini
@@ -5,6 +5,7 @@ ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "DE9269E1468EF5D5C6F
 ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "243FC2114D90E31D48C9A2829AC99758", "Debug - Space Cat Hotel")
 Description=Space Cat Hotel
 CompanyName=nsobczak
+ProjectVersion=1.0.0
 
 [/Script/SpaceCatRTS.SpaceCatRTSCharacter]
 FixedCameraPitch=-45.0
@@ -94,5 +95,4 @@ bSkipMovies=False
 +EarlyDownloaderPakFileFiles=...\global_sf*.metalmap
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
-
 
