Fixed click button bug

--- a/SpaceCatRTS/Config/DefaultEngine.ini
+++ b/SpaceCatRTS/Config/DefaultEngine.ini
@@ -12,6 +12,8 @@ MediumFontName=/Game/Font/Starcraft_Normal_Font.Starcraft_Normal_Font
 SmallFontName=/Game/Font/Starcraft_Normal_Font.Starcraft_Normal_Font
 TinyFontName=/Game/Font/Starcraft_Normal_Font.Starcraft_Normal_Font
 LargeFontName=/Game/Font/Starcraft_Normal_Font.Starcraft_Normal_Font
+DefaultTimecodeFrameRate=(Numerator=60,Denominator=1)
+SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=30.000000),UpperBound=(Type=Exclusive,Value=60.000000))
 
 [/Script/Engine.RendererSettings]
 r.MobileHDR=True
